--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 spring:
   application:
-    name: customer-service
+    name: inventory-service
 
-  # database:
+  # database connection:
   datasource:
-    url: jdbc:h2:mem:customer-db
+    url: jdbc:h2:mem:product-db
+
   h2:
     console:
       enabled: true
@@ -14,11 +15,13 @@ spring:
     rest:
       detection-strategy: annotated
 
-# port:
+# server:
 server:
-  port: 8081
+  port: 8082
 
-# resolve IP address from hostname:
+# register microservice with IP address:
 eureka:
   instance:
     prefer-ip-address: true
+
+
